[gd_scene load_steps=11 format=3 uid="uid://b6yw267l65fnk"]

[ext_resource type="Script" path="res://logic/game/enemy/base_enemy.gd" id="1_hubbq"]
[ext_resource type="Texture2D" uid="uid://b2jab8dxmfrrw" path="res://art/game/ennemi2.png" id="2_05yir"]
[ext_resource type="Texture2D" uid="uid://bftjt7wde2yg7" path="res://art/game/ombre.png" id="2_tk2nc"]
[ext_resource type="Material" uid="uid://b1e7bs6nc5dy0" path="res://art/shaders/monster_shader.tres" id="3_aeard"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cuywa"]
atlas = ExtResource("2_05yir")
region = Rect2(0, 0, 42, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5t2q"]
atlas = ExtResource("2_05yir")
region = Rect2(42, 0, 42, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxds1"]
atlas = ExtResource("2_05yir")
region = Rect2(84, 0, 42, 36)

[sub_resource type="SpriteFrames" id="SpriteFrames_ll31j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cuywa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5t2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxds1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5t2q")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_5wxan"]
radius = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_a7k1j"]
radius = 14.0

[node name="BaseEnemy" type="RigidBody2D"]
collision_layer = 2
collision_mask = 2
gravity_scale = 0.0
lock_rotation = true
script = ExtResource("1_hubbq")

[node name="Ombre" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.419608)
position = Vector2(-2.75, 13.875)
scale = Vector2(0.684783, 0.942308)
texture = ExtResource("2_tk2nc")

[node name="Animation" type="AnimatedSprite2D" parent="."]
material = ExtResource("3_aeard")
sprite_frames = SubResource("SpriteFrames_ll31j")
frame_progress = 0.659873
speed_scale = 0.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5wxan")

[node name="Line2D" type="Line2D" parent="."]
visible = false
points = PackedVector2Array(0, 0, 0, 0)
width = 1.0
default_color = Color(1, 0.356863, 0.568627, 1)

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="StunTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 3.0
one_shot = true

[node name="DamageBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageBox"]
shape = SubResource("CircleShape2D_a7k1j")

[node name="InShadowAnimation" type="AnimatedSprite2D" parent="."]

[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="StunTimer" to="." method="_on_stun_timer_timeout"]
[connection signal="area_entered" from="DamageBox" to="." method="_on_damage_box_area_entered"]
